@@ -28,7 +28,13 @@ as are any SlackBuilds marked
 .I
 _SBo
 that are not found in the
-repository.
+repository or local overrides (see
+.B
+sboconfig(1)
+or
+.B
+sbotools.conf(5)\fR\
+).
 .P
 The three output categories are logged separately to
 .I
