@@ -310,7 +310,11 @@ sboconfig(1)
 and
 .B
 sbotools.conf(5)\fR\
-\&.
+\&. Please note that SlackBuilds installed from a
+.B
+LOCAL_OVERRIDES
+directory are upgraded only if the version or build number
+from this directory varies.
 .RE
 .SH EXIT CODES
 .P
